--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,77 @@
-- Build/install:
-  - riak
+
+
+
+# SDC 6.5
+
+cutoff: Sep 1
+
+
+# MVP
+
+"The absolute MVP for Monitoring is having the ability to alert when a
+VM or Zone goes down, and the ability to alert someone via email." -- Trevor
+
+More specific MVP:
+- Amon is up an running in a default SDC setup (modulo headnode-refactor work).
+  Details: 'amon' headnode zone running amon-master. 'amonriak' headnode
+  zone. 'amon-relay' running in each compute node GZ. Unsure whether getting
+  an amon-agent running in each zone is necessary. Also what about amon-agent
+  in VMs? That would have to be optional and not possible for Windows right
+  now.
+- Amon can be setup to email an operator when a VM or Zone goes down.
+  Q: distinguishing between intentional reboots and shutdowns?
+  Q: required to guard against email flood on *server* shutdown?
+- Docs on adding more amonriak nodes.
+- Docs on setting up the notifications above.
+
+Internal requirements for first release:
+- Upgradeable:
+  - db migration story
+  - amon-master upgrade story
+  - amon-relay upgrade story
+  - amon-agent install/upgrade story
+- Test suite with decent coverage.
+- Load testing.
+
+
+
+# TODOs for MVP
+
+- Build/install (usb-headnode, bamboo, mountain-gorilla):
+  - riak: discuss with others if separate riak clusters for separate apps
+    or one shared one? billing/amon/hostrouter(?)/capi
   - master
   - relay (SMF packaging done; bamboo started)
   - agent
+- Email Notification Plugin
+- Retry/backoff everywhere: Restify-client supports everything needed here?
+- event on zone transitions:
+  - can just have relay fwd events from zwatch?
+  - ask Orlando for work on this, discussion on XMPP on this recent to Aug 3 btwn Orlando and wdp(?)
+- event on VM transitions: ask Josh about how to do this
+- Garbage collection of /events and orphans
+- in riak, use uuid instead of customer_name for keys, if possible
+- load testing (hook into mock cloud for this?)
+  - estimate of design-limit on number of watches/notifications/events
+  - e.g., what would it be on no.de
+- amon-agent in all smartos zones? Necessary for 6.5?
+- upgrade plan and testing
+  - versioning (see ca/Makefile, and 1.0.0 instead of 6.1)
+  - config handling
+
+
+
+# Post-6.5 TODOs and RFEs
+
+- *trying* with a second riak node
 - CA Agent Plugin
 - HTTP Agent Plugin
-- Email Notification Plugin
-- Change Twilio to SMS
-- Retry/backoff everywhere
+- revive twillio notification backend as "sms"
 - Default to CAPI lookup user email on no contacts
-- missing data alarms in master
-- edge-triggered alarms in master for checks
+- missing data alarms in master: ???
+- edge-triggered alarms in master for checks: ???
 - /events cleanup (look like other master apis)
-- in riak, use uuid instead of customer_name for keys, if possible
-- Garbage collection of /events and orphans
 - client SDK
-- docs
 - Admin UI
+- amon client
+- snmp (MarkC: "snmp traps". Me: What's that?)
