--- a/TODO.txt
+++ b/TODO.txt
@@ -37,6 +37,8 @@ offered to do some work on amon if feasible.
 
 - Tue,  9 Aug: Hack up watching zone start/stop and vm start/stop. Grokking Riak models and indexing.
 - Wed, 10 Aug: Test plan for zone/vm start/stop in COAL. Test cases. Clean up test suite.
+  -> Today trent moved over to help with no.de for nodeKO. Hence, amon
+     probably not making SDC 6.5.
 - Thu, 11 Aug: [Nectarine] Email notification plugin (nodemailer). Amon-master and amon-relay builds (bamboo, mountain-gorilla).
 - Fri, 12 Aug: Amon-master and amon-relay builds (bamboo, mountain-gorilla).
 - Mon, 15 Aug: amon & amonriak headnode zones (using Jerry's headnode-refactor process)
@@ -92,6 +94,7 @@ Workdays left: 14 days (starting at 9-Aug) - 2 days lost to no.de help (at least
 
 # Trent's scratch area
 
+- upgrade deps/node and deps/npm versions to latest
 - faking an event (calling Relay API):
     $ bin/amon-relay-api /events -X POST -d @-
     {"check":"joyent_whistle","status":"error","metrics":{"name":"amon:logscan","type":"Integer","value":2,"data":{"match":"i hear a tweet from someone"}}}
